--- a/cookbook/src/_base.scss
+++ b/cookbook/src/_base.scss
@@ -10,5 +10,5 @@ body {
     min-height: 100vh;
     width: 100%;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
 }
