--- a/cookbook/src/components/Modal/modal.scss
+++ b/cookbook/src/components/Modal/modal.scss
@@ -7,41 +7,40 @@
         position: fixed;
         width: 100%;
         height: 100vh;
-        z-index: 1000;
+        z-index: 1;
         .modal-content {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            padding-left: 2vw;
             background-color: white;
-            width: 20vw;
-            min-height: 50vh;
+            width: 27vw;
             border-radius: 25px;
             padding-bottom: 1vh;
+            input{
+                margin-bottom: 2vh;
+            }
             .menutitle {
-                font-family: "Water Brush", cursive;
+                font-family: "Serif";
                 font-size: 2em;
                 letter-spacing: 2px;
                 text-align: center;
-                margin-bottom: 1.5vh;
+                margin-bottom: 2.5vh;
                 display: block;
                 border-bottom: 1px solid gray;
                 width: 100%;
             }
             .titles {
-                font-family: "Water Brush", cursive;
                 font-size: 1.2em;
                 margin-bottom: 0.1vh;
                 margin-right: 4vw;
                 letter-spacing: 1.2px;
             }
-            .answ {
-                font-family: "Water Brush", cursive;
-            }
+            
             .modalinput {
-                border-radius: 25px;
+                border-radius: 5px;
                 border: 1px solid gray;
                 width: 15vw;
-                height: 2.8vh;
+                height: 3vh;
             }
             .modalinput:focus {
                 outline: none;
@@ -50,30 +49,27 @@
             }
             .radioflex {
                 display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                width: 15vw;
+                justify-content: space-between;
+                padding-right: 10%;
+                width: 100%;
                 font-family: 'Poppins', sans-serif;
-                span {
-                    margin-left: 0.5vw;
+                p{
+                    width: 40%;
                 }
             }
             .divbtn {
-                width: 100%;
+                width: 90%;
                 display: flex;
-                justify-content: flex-end;
+                justify-content: space-around;
                 align-items: center;
                 margin-bottom: 1vh;
                 .submitBtn {
-                    background-color: $color2;
+                    background-color: rgb(106, 211, 106);
                     padding: 0.5vh 1vw;
-                    border-radius: 25px;
+                    border-radius: 5px;
                     border: none;
                     font-size: 0.9em;
                     color: white;
-                    margin-left: 0.5vw;
-                    margin-right: 2vw;
                 }
                 .submitBtn:hover {
                     cursor: pointer;
@@ -115,10 +111,9 @@
                     }
                 }
                 .close-modal {
-                    margin-left: 0.5vw;
-                    background-color: $color1;
+                    background-color: rgb(240, 111, 111);
                     padding: 0.5vh 1vw;
-                    border-radius: 25px;
+                    border-radius: 5px;
                     border: none;
                     font-size: 0.9em;
                     color: white;
@@ -127,27 +122,6 @@
                     cursor: pointer;
                     animation: shake 0.5s;
                 }
-                // .macaroondiv {
-                //     width: 5vw;
-                //     height: 3vh;
-                //     margin-bottom: 4vh;
-                //     margin-left: 1vw;
-                //     .macpicdiv {
-                //         background-image: url('../../images/littlemacaroons.png');
-                //         background-repeat: no-repeat;
-                //         background-size: contain;
-                //         background-position: center;
-                //         height: 6vh;
-                //         width: 6vw;
-                //     }
-                //     .macpicdiv:hover {
-                //         background-image: url('../../images/bigmacaroon.png');
-                //         background-repeat: no-repeat;
-                //         background-size: contain;
-                //         background-position: center;
-                //         height: 7vh;
-                //     }
-                // }
             }
         }
     }
