--- a/cookbook/src/components/Card/card.scss
+++ b/cookbook/src/components/Card/card.scss
@@ -8,9 +8,10 @@
     margin-right: 2vw;
     min-height: 20vh;
     width: 20.5vw;
+    margin-bottom: 2vh;
     .cardimg {
-        width: 20vw;
-        max-height: 22vh;
+        width: 100%;
+        max-height: 30vh;
         border-radius: 7px 7px 0px 0px
     }
     .cardmealtitle {
