--- a/cookbook/src/components/Footer/footer.scss
+++ b/cookbook/src/components/Footer/footer.scss
@@ -7,6 +7,7 @@
     text-align: center;
     flex-shrink: 0;
     font-family: "Poppins", sans-serif;
+    margin-top: 10vh;
     span {
         color: $color1;
         font-family: "Water Brush", cursive;
